--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
         <p>We'll help you know yourself better, for the betterment of your future. </p>
 
         <div class="sb">
-            <a href="f.html" class="sbb">Get started</a>
+            <a href="contact.html" class="sbb">Learn more?</a>
         </div>
     </div>
     <div class="block">
