--- a/schedule.html
+++ b/schedule.html
@@ -1,19 +1,14 @@
-<html lang="en">
-
+<DOCTYPE! html>
+<html>
 <head>
     <title>Schedule</title>
 </head>
 
 <body>
-    <!DOCTYPE html>
-    <html lang="en">
-
     <head>
         <style>
             body {
                 font-family: sans-serif;
-                background-size: cover;
-                background-position: center;
                 margin: 0;
                 padding: 0;
                 background-image: url('background.jpg');
@@ -22,11 +17,10 @@
                 padding-top: 100px;
                 font-family: Arial, sans-serif;
             }
-
-
             table {
                 z-index: 2;
                 width: 60%;
+                height: 80%;
                 border-collapse: collapse;
                 box-shadow: 0 2px 10px rgba(64, 64, 64, .7);
                 border-radius: 12px 12px 0 0;
@@ -36,24 +30,26 @@
 
             td {
                 opacity: 70%;
-                background-color: rgb(0, 225, 255);
-                color: rgb(0, 0, 0);
+                background: rgba(32, 3, 3, 0.233);
+                color: white;
                 font-size: 15px;
-                font-family: 'sans-serif';
+                font-family: sans-serif;
                 padding: 8px 40px;
                 text-align: center;
+                border: 1px solid #dddddd;
             }
 
             th {
                 font-size: 20;
-                font-family: 'sans-serif';
-                border: 1px solid #ddd;
+                font-family: sans-serif;
+                border: 1px solid #dddddd;
                 padding: 8px 30px;
                 text-align: center;
             }
 
             th {
-                background-color: #f2f2f2;
+                background-color: #f2f2f24e;
+                color: rgba(32, 3, 3, 0.779);
             }
 
             center {
@@ -78,7 +74,7 @@
             <table>
                 <thead>
                     <tr>
-                        <td height="50" colspan="5" align="center"> <strong> CLASS SCHEDULE </strong> </td>
+                        <td height="50" colspan="5" align="center"> <strong>BSIT 1-1 CLASS SCHEDULE</strong> </td>
                     </tr>
                 </thead>
                 <thead>
@@ -125,9 +121,5 @@
             </table>
         </center>
     </body>
-
     </html>
-
-</body>
-
 </html>
