--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
-<html lang="en">
-
+<DOCTYPE! html>
+<html>
 <head>
     <title>About</title>
 
@@ -19,6 +19,7 @@
             min-height: 100vh;
             background: url(background.jpg);
             background-size: cover;
+            font-family: sans-serif;
         }
 
         content {
@@ -203,7 +204,7 @@
                 <img class="picimg" src="marc.jpg">
                 <div class="desc">
                     <strong>
-                        <center>Harvey Fabro Sierra</center>
+                        <center>Marc Christer Saballo</center>
                     </strong>
                     <p><strong>Birthdate:</strong> August 12. 2004<br>
                         <strong>Birthplace:</strong> Taguig City <br>
