--- a/schedule.html
+++ b/schedule.html
@@ -3,7 +3,6 @@
 <head>
     <title>Schedule</title>
 </head>
-
 <body>
     <head>
         <style>
@@ -22,23 +21,20 @@
                 width: 60%;
                 height: 80%;
                 border-collapse: collapse;
-                box-shadow: 0 2px 10px rgba(64, 64, 64, .7);
+                box-shadow: 0 2px 10px rgba(64, 64, 64, 0.746);
                 border-radius: 12px 12px 0 0;
 
             }
-
-
             td {
-                opacity: 70%;
-                background: rgba(32, 3, 3, 0.233);
-                color: white;
+                opacity: 90%;
+                background: rgba(32, 3, 3, 0.246);
+                color: rgb(255, 255, 255);
                 font-size: 15px;
                 font-family: sans-serif;
                 padding: 8px 40px;
                 text-align: center;
                 border: 1px solid #dddddd;
             }
-
             th {
                 font-size: 20;
                 font-family: sans-serif;
@@ -46,18 +42,15 @@
                 padding: 8px 30px;
                 text-align: center;
             }
-
             th {
-                background-color: #f2f2f24e;
-                color: rgba(32, 3, 3, 0.779);
+                background-color: #f2f2f2ba;
+                color: rgba(32, 3, 3, 0.992);
             }
-
             center {
                 display: block;
                 margin-left: auto;
                 margin-right: auto;
             }
-
             footer {
                 color: yellow;
                 padding: 10px;
