--- a/header.html
+++ b/header.html
@@ -1,45 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Page Title</title>
     <style>
         body {
-            font-family: "poppins" sans-serif;
+            font-family: sans-serif;
             margin: 0;
             padding: 0;
         }
-
         header {
-            background-color: black;
+            background: black;
             color: #00ce67;
             padding: 0;
             text-align: center;
         }
-
         .head {
             background-image: url('rd2.jpg');
             background-size: cover;
             backdrop-filter: blur(24px);
             box-sizing: border-box;
-            font-family: "Rajdhani";
+            font-family:sans-serif;
             color: #fff;
             padding: 4px;
             display: flex;
             justify-content: space-between;
             text-align: center;
         }
-
         p {
             font-size: 18px;
             margin: 0;
         }
-
         nav {
-            margin-left: 650px;
-            margin-right: 20px;
+            margin: auto;
             color: black;
             text-align: center;
             padding: 0;
@@ -47,17 +37,14 @@
             justify-content: space-between;
             align-items: center;
         }
-
         nav a:hover {
-            color: 0 0 10px rgba(255, 0, 0, 0.8);
+            color: silver;
         }
-
         .nl {
             display: flex;
         }
-
         .nl a {
-            color: yellow;
+            color: white;
             text-decoration: none;
             padding: 13px;
             margin-right: 15px;
@@ -66,7 +53,6 @@
         }
     </style>
 </head>
-
 <body>
     <header>
         <marquee>
@@ -76,7 +62,7 @@
     <header class="head" id="head">
         <nav>
             <div class="nl">
-                <a href="home.html" target="FrmeDisp"> HOME </a>
+                <a href="home.html" target="FrmeDisp">HOME </a>
                 <a href="schedule.html" target="FrmeDisp"> SCHEDULE </a>
                 <a href="about.html" target="FrmeDisp"> ABOUT US</a>
                 <a href="contact.html" target="FrmeDisp"> CONTACT US</a>
@@ -84,5 +70,4 @@
         </nav>
     </header>
 </body>
-
 </html>
