--- a/background.html
+++ b/background.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<DOCTYPE! html>
 <head>
 
     <title>Background</title>
@@ -13,7 +13,4 @@
         background-size: cover;
     }
 </style>
-<body>
-    
-</body>
 </html>
