--- a/forgotpass.html
+++ b/forgotpass.html
@@ -1,5 +1,4 @@
-<html lang="en">
-
+<DOCTYPE! html>
 <head>
     <title> Forgot Password </title>
     <script src="https://kit.fontawesome.com/2cca868f52.js" crossorigin="anonymous"></script>
