--- a/forgotpass.html
+++ b/forgotpass.html
@@ -1,4 +1,4 @@
-<DOCTYPE! html>
+<!DOCTYPE html>
 <head>
     <title> Forgot Password </title>
     <script src="https://kit.fontawesome.com/2cca868f52.js" crossorigin="anonymous"></script>
