--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<html lang="en">
-
+<!DOCTYPE html>
 <head>
     <title>Sign up</title>
     <script src="https://kit.fontawesome.com/2cca868f52.js" crossorigin="anonymous"></script>
@@ -71,18 +70,15 @@
         transition: .3s;
 
     }
-
     button:hover {
         background-color: rgb(0, 153, 255);
         color: rgb(0, 255, 234);
     }
-
     label {
         margin: 0;
         display: flex;
         font-size: 14px;
     }
-
     .box input {
         margin-right: 8px;
         width: 15px;
