--- a/about.html
+++ b/about.html
@@ -1,234 +1,124 @@
 <!DOCTYPE html>
-<html>
 <head>
-
     <style>
-        * {
-            padding: 0;
-            margin: 0;
-        }
-
         body {
-            margin: 0;
-            margin: 80px;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            background: url(background.jpg);
-            background-size: cover;
-            font-family: sans-serif;
-        }
+    font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    color: white;
+    overflow: hidden;
+    background: url(background.jpg);
+    background-size: cover;
+    background-position: center;
+}
+content {
+    margin-top: 20px;
+    padding: 20px;
+    text-align: center;
+}
+footer {
+    text-align: center;
+    padding: 10px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+.imgcon{
+    display: flex;
+    align-items: center; 
+    margin: 10px;
+}
+img {
+    border: 10px solid rgba(0, 0, 0, 0.3);
+    border-radius: 5px; 
+    height: 200px; 
+    width: 200px;
+    margin-right: 20px; 
+    background: rgba(32, 3, 3, 0.181);
+    backdrop-filter: blur(5px);
+    margin-top: 0%;
+    margin-left: 8%;
+}
+.text {
+    text-align: justify;
+    background: rgba(32, 3, 3, 0.274);
+    backdrop-filter: blur(5px);
+    padding: 15px;
+    margin-top: 0%;
+    width: 70%;
+    display: inline-block;
+}
+.sb {
+    text-align: center;
+    text-decoration: none;
+    margin-top: 2%;
+    margin-bottom: 20px;
+}
 
-        content {
-            margin: 0;
-            padding: 0;
-            text-align: center;
-        }
-
-        .box {
-            margin: 0;
-            display: flex;
-            justify-content: space-evenly;
-            margin-top: 30px;
-            border-radius: 20px;
-            position: relative;
-            width: 300px;
-            height: 519px;
-            justify-content: center;
-            align-items: center;
-            background: #060c21;
-        }
-
-        .box:before {
-            margin: 0;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-evenly;
-            content: '';
-            position: absolute;
-            top: 1px;
-            left: 1px;
-            right: 1px;
-            bottom: 1px;
-            z-index: -2;
-            filter: blur(20px);
-        }
-
-        .box:before,
-        .box:after {
-            background: linear-gradient(150deg, blue, red, red, blue);
-        }
-
-        .picture {
-            border-top-left-radius: 20px;
-            border-top-right-radius: 20px;
-            border-radius: 0px;
-            margin-right: 10px;
-            margin-left: 10px;
-        }
-
-        .picimg {
-            border-top-left-radius: 20px;
-            border-top-right-radius: 20px;
-            width: 300px;
-            height: 320px;
-        }
-
-        .desc {
-            text-align: justify;
-            width: 300px;
-            height: 200px;
-            background-color: #57afcad7;
-            border-bottom-left-radius: 20px;
-            border-bottom-right-radius: 20px;
-            text-align: left;
-        }
-
-        p {
-            margin-right: 10px;
-            margin-left: 10px;
-            text-align: justify;
-        }
-
-        .picimg1 {
-            border-top-left-radius: 20px;
-            border-top-right-radius: 20px;
-            width: 300px;
-            height: 305px;
-        }
-
-        .desc1 {
-            text-align: justify;
-            width: 300px;
-            height: 215px;
-            background-color: #57afcad7;
-            border-bottom-left-radius: 20px;
-            border-bottom-right-radius: 20px;
-            text-align: left;
-        }
-
-        footer {
-            color: black;
-            padding: 10px;
-            text-align: center;
-            bottom: 0;
-            width: 100%;
-        }
-
-        h2 {
-            margin-top: -10px;
-        }
+.sbb {
+    align-items: center;
+    font-size: 15px;
+    padding: 10px 50px;
+    background-color: #ffffff;
+    color: white;
+    border: 2px solid white;
+    background: rgba(32, 3, 3, 0.078);
+    backdrop-filter: blur(5px);
+    cursor: pointer;
+    transition: background-color 0.3s;
+    border-radius: 10px;
+    text-decoration: none;
+}
+.sbb:hover {
+    background-color: #ffffff;
+    color: #000000;
+}   
     </style>
-
+</head>
 <body>
     <content>
-        <u>
-            <h2>SIERRA</h2>
-        </u>
-        <div class="box">
-            <div class="picture">
-                <img class="picimg" src="SIERRA FAM.png">
-                <div class="desc">
-                    <strong>
-                        <center>MY FAMILY</center>
-                    </strong>
-                    <p><strong>Father:</strong> Hilario R. Sierra <br>
-                        <strong> Proffesion: </strong>Travel Agent<br>
-                        <strong>Mother:</strong> Editha F. Sierra <br>
-                        <strong>Profession:</strong> X-ray Technician <br>
-                        <strong>Brother:</strong> Yrrahl Sierra <br>
-                        <strong>Occupation:</strong> Student (VetMed)<br>
-                    </p>
-                </div>
-            </div>
-            <div class="picture">
-                <img class="picimg" src="Harvey.png">
-                <div class="desc">
-                    <strong>
-                        <center>Harvey Fabro Sierra</center>
-                    </strong>
-                    <p><strong>Birthdate:</strong> October 11, 2003<br>
-                        <strong>Birthplace:</strong> Dubai, UAE <br>
-                        <strong>Address:</strong> 149 Tambo Malaki, Indang, Cavite <br>
-                        <strong>Age:</strong> 20 years old<br>
-                        <strong>School:</strong> Cavite State University-Main<br>
-                        <strong>Course:</strong> BSIT - Irregular 2nd year<br>
-                    </p>
-                </div>
-            </div>
+        <div class="imgcon">
+            <img src="Harvey.png">
+            <div class="text">
+                <center><strong>HARVEY FABRO SIERRA</strong></center>
+                <center><p><strong>Birthdate:</strong> October 11, 2003<br>
+                    <strong>Birthplace:</strong> Dubai, UAE <br>
+                    <strong>Address:</strong> 149 Tambo Malaki, Indang, Cavite <br>
+                    <strong>Age:</strong> 20 years old<br>
+                    <strong>School:</strong> Cavite State University-Main<br>
+                    <strong>Course:</strong> BSIT - Irregular 2nd year<br></p> </center>
 
-            <div class="picture">
-                <img class="picimg1" src="hob1.jpeg">
-                <div class="desc1">
-                    <strong>
-                        <center>HOBBY</center>
-                    </strong>
-                    <p>Earlier in my life, I used to be active in sports, Basketball and Table Tennis, I used to be
-                        an
-                        athlete, but things
-                        has changed when I injured myself, I was scared and maybe traumatized, the feeling that I am
-                        scared to do what I used to do. Today,
-                        I like to play video games with my friends such as Valorant, Sports games, CSGO etc. and
-                        hang
-                        out with them do memories that will last forever. </p>
-                </div>
             </div>
         </div>
-        <br><br><br><br>
-        <u>
-            <h2>SABALLO</h2>
-        </u>
-        <div class="box">
-            <div class="picture">
-                <img class="picimg" src="fam1.jpg">
-
-                <div class="desc">
-                    <strong>
-                        <center>MY FAMILY</center>
-                    </strong>
-                    <p><strong>Father:</strong> Michael S. Saballo <br>
-                        <strong> Proffesion: </strong> Maintenance Electrician<br>
-                        <strong>Mother:</strong> Mariales I. Saballo <br>
-                        <strong>Profession:</strong> Housewife <br>
-                        <strong>Brother:</strong> Mark Clowie I. Saballo <br>
-                        <strong>Occupation:</strong> Electrial Technology Student <br>
-                        <strong>Brother:</strong> Christian I. Saballo<br>
-                        <strong>Occupation:</strong> Student (Grade IX)<br>
-                    </p>
-                </div>
+        <div class="imgcon">
+            <img src="SIERRA FAM.png">
+            <div class="text">
+                <center><strong>SIERRA FAMILY</strong></center>
+                <center><p><strong>Father:</strong> Hilario R. Sierra <br>
+                    <strong> Proffesion: </strong>Travel Agent<br>
+                    <strong>Mother:</strong> Editha F. Sierra <br>
+                    <strong>Profession:</strong> X-ray Technician <br>
+                    <strong>Brother:</strong> Yrrahl Sierra <br>
+                    <strong>Occupation:</strong> Student (VetMed)<br></center></p>
             </div>
-            <div class="picture">
-                <img class="picimg" src="marc.jpg">
-                <div class="desc">
-                    <strong>
-                        <center>Marc Christer Saballo</center>
-                    </strong>
-                    <p><strong>Birthdate:</strong> August 12. 2004<br>
-                        <strong>Birthplace:</strong> Taguig City <br>
-                        <strong>Address:</strong> Golden Horizon, Perez, Trece Martires, Cavite <br>
-                        <strong>Age:</strong> 19 years old<br>
-                        <strong>School:</strong> Cavite State University-Main<br>
-                        <strong>Course:</strong> BSIT - 1st year<br>
-                    </p>
-                </div>
+        </div>
+        <div class="imgcon">
+            <img src="hob1.jpeg">
+            <div class="text">
+                <center><strong>MY HOBBY</strong></center>
+                    <center><p>Earlier in my life, I used to be active in sports, Basketball and Table Tennis, I used to love these sports with all my heart, the dream of being in the big stage in these sports but things
+                    has changed when I injured myself, I dislocated my left knee while playing basketball and after recovery it was never the same. I was scared and maybe traumatized to experienced it again, the feeling that I am
+                    scared to do what I want to do. I experieced it countless of times but the pain never changed, so I am always hesistant to do what I think I would do. Today, I like to play video games with my friends such as Valorant, Sports games, CSGO etc. and hang
+                    out with them, do memories that will last forever. </center></p>
             </div>
-
-            <div class="picture">
-                <img class="picimg1" src="hob2.jpg">
-                <div class="desc1">
-                    <strong>
-                        <center>HOBBY</center>
-                    </strong>
-                    <p>My current hobbies include taking random pictures, playing online RPG and FPS games such as
-                        Valorant and Black Clover. Additionally, I enjoy socializing with friends and watching
-                        movies or
-                        series that pique my interest whenever I have the time.</p>
-                </div>
-            </div>
+        </div>
+        <div class="sb">
+            <a href="about2.html" class="sbb">Next</a>
         </div>
     </content>
-</body>
+    <footer>
+        <p> &copy; 2024 All Rights Reserved</p>
+    </footer>
 
+</body>
 </html>
