--- a/header.html
+++ b/header.html
@@ -11,6 +11,7 @@
             color: #00ce67;
             padding: 0;
             text-align: center;
+            overflow: hidden;
         }
         .head {
             background-image: url('rd2.jpg');
